--- a/fyncol-client/index.html
+++ b/fyncol-client/index.html
@@ -1,19 +1,49 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
   <head>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-<link
-  href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Sora:wght@400;500;600;700&display=swap"
-  rel="stylesheet"
-/>
-
+    <!-- Charset -->
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+
+    <!-- Viewport -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>fyncol-client</title>
+
+    <!-- Title -->
+    <title>Fyncol | Seguimiento y Gestión de Cartera</title>
+
+    <!-- Description (SEO) -->
+    <meta
+      name="description"
+      content="Fyncol es una plataforma moderna para el seguimiento, control y gestión de cartera. Organiza tus cuentas por cobrar y toma decisiones con claridad."
+    />
+
+    <!-- Theme Color -->
+    <meta name="theme-color" content="#070A12" />
+
+    <!-- Favicon -->
+    <link rel="icon" href="/favicon.ico" />
+
+    <!-- Apple Touch Icon (opcional futuro) -->
+    <link rel="apple-touch-icon" href="/favicon.ico" />
+
+    <!-- Open Graph (para compartir en redes) -->
+    <meta property="og:title" content="Fyncol | Gestión Inteligente de Cartera" />
+    <meta
+      property="og:description"
+      content="Controla y organiza tu cartera de forma clara y profesional con Fyncol."
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="/favicon.ico" />
+
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Sora:wght@400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
-  <body>
+
+  <body class="bg-[#070A12] text-white">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
